--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build
+      run: go build -o dist/eprconv eprconv/cmd
 
     - name: Test
       run: go test -v ./...
